# ml-quant-trading

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  arXiv-2507.07107v1.tex  cuda_features.py  demo_baostock.ipynb  download_list.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_result.yml  bug_report.yml  feature_request.yml  pairing_request.yml  public_data_case_study.yml  public_data_validation.yml  research_question.yml
.github/workflows/: ci.yml
.temp/: AAPL_sample.csv  baoExample.py  hs300_list.csv  prepare_data.py  sample_yfinance.py  test_loader_pandas.py  yfinance_aapl.csv  zz500_list.csv
backtracking/: analyze_log.sh  analyze_trade_log.py  filter_data.py.last_close  genOrg.sh  regr2.sh
configs/: paper.yaml  small.yaml
docs/: architecture.md  backtest_assumptions.md  benchmark_board.md  benchmarking.md  community.md  community_outreach.md  content_calendar.md  docker.md  factor_handbook.md  factor_handbook_en.md  factors.md  faq.md  growth_plan.md  index.html  launch_kit.md  launch_playbook.md  promotion_kit.md  public_data_mini_reproduction.md  public_data_validation.md  reality_check.md  release_draft_v0.1.0.md  release_draft_v0.2.0.md  reproducing_paper.md  research_card.md  roadmap.md  start_here.md  validation_baostock_20260716.md  validation_digest_20260720.md  validation_synthetic_20260716.md  visibility_status.md
legacy/: README.md
notebooks/: public_factor_ic.ipynb
scripts/: README.md  aggregate_validation_reports.py  audit_validation_report.py  benchmark_tensor_factors.py  etf_factor_ic.py  etf_factor_ic_output.txt  eval_factor_ic.py  plot_frontier.py  public_data_validation.py
tests/: conftest.py  test_aggregate_validation_reports.py  test_alpha101.py  test_audit_validation_report.py  test_augment.py  test_baostock.py  test_benchmark_tensor_factors.py  test_bias.py  test_losses.py  test_markowitz.py  test_metrics.py  test_neutralize.py  test_public_data_validation.py  test_synthetic.py  test_tensor_factors.py
trade_predict/: dataset.py  eval.py  eval_1.py  fea.ini  fea.ini.141  model.py  test_regression.py  train_regression.py  train_regression_159.py  train_regression_year_159.py  train_version_1.py  train_version_2.py  train_version_3.py
(+175 files in other folders)
